[package]
name = "app"
version = "0.1.0"
authors = ["Ryan Westlund <rlwestlund@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ws = "0.9"
anyhow = "1"
lazy_static = "1.4.0"
serde = {version="1", features=["derive"]}
serde_json = "1"
